// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test empty state 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
>
  <div
    className="inner"
  />
</div>
`;

exports[`Test with children 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
>
  <div
    className="inner"
  >
    Hello World
  </div>
</div>
`;

exports[`Test with className 1`] = `
<div
  className="Pinpoint Banner wrapper bg-red-500 text-white"
>
  <div
    className="inner"
  >
    Hello World
  </div>
</div>
`;

exports[`Test with closeable 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-times fa-w-11 close"
    data-icon="times"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 352 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <div
    className="inner"
  >
    Hello World
  </div>
</div>
`;

exports[`Test with message 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
>
  <div
    className="inner"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-info-circle fa-w-16 icon"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`Test with message and icon 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
>
  <div
    className="inner"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-exclamation-circle fa-w-16 icon"
      data-icon="exclamation-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`Test with styles 1`] = `
<div
  className="Pinpoint Banner wrapper bg-yellow-500 text-yellow-900"
  style={
    Object {
      "backgroundColor": "#900",
      "color": "#fff",
    }
  }
>
  <div
    className="inner"
  >
    Hello World
  </div>
</div>
`;
